getalluser
